# advent_of_code_2021

./: pyproject.toml
advent_of_code_2021/: task_1a.py  task_1b.py
