[tool.poetry]
name = "advent_of_code_2021"
version = "0.1.0"
description = ""
authors = ["Jakub Nowicki <kuba@appsilon.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^21.11b1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
